[gd_scene load_steps=6 format=3 uid="uid://clbwn8c67e30h"]

[ext_resource type="Script" uid="uid://bw3gmtre2ex4s" path="res://SCRIPTS/hud.gd" id="1_87uan"]
[ext_resource type="PackedScene" uid="uid://cm1mp7yf5535t" path="res://SCENES/coin_icon.tscn" id="2_2xvbx"]
[ext_resource type="FontFile" uid="uid://dubt1jymhq6fq" path="res://ASSETS/VCR_OSD_MONO_1.001.ttf" id="3_kyhng"]

[sub_resource type="LabelSettings" id="LabelSettings_undyj"]
font = ExtResource("3_kyhng")

[sub_resource type="LabelSettings" id="LabelSettings_kyhng"]
font = ExtResource("3_kyhng")

[node name="HUD" type="CanvasLayer" node_paths=PackedStringArray("coin_container", "coin_label", "portal_label") groups=["Hud"]]
script = ExtResource("1_87uan")
coin_container = NodePath("coin_container")
coin_icon_scene = ExtResource("2_2xvbx")
coin_label = NodePath("coin_label")
portal_label = NodePath("portal_label")

[node name="coin_container" type="VBoxContainer" parent="."]
offset_top = -320.0
offset_right = 64.0
offset_bottom = 328.0
alignment = 2

[node name="coin_label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_undyj")

[node name="portal_label" type="Label" parent="."]
offset_top = 24.0
offset_right = 40.0
offset_bottom = 47.0
label_settings = SubResource("LabelSettings_kyhng")
